--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,13 @@ readme = "README.md"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.12.7"
 pydantic = "^2.11.5"
+gradio = "^5.41.1"
+ibm-watsonx-ai = "^1.3.32"
+python-dotenv = "^1.1.1"
+loguru = "^0.7.3"
+pre-commit = "^4.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
